<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/addStoryItem"
        android:icon="@drawable/ic_add_square"
        android:title="@string/add_story"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/languageSettingItem"
        android:title="@string/language_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/logoutItem"
        android:title="@string/log_out"
        app:showAsAction="never" />
</menu>